# monotable

./: .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  README.rst  checklist.txt  contributing.md  pyproject.toml  readme_preview.py  setup.cfg  setup.py  tox.ini  toxdev.ini
.github/workflows/: build.yml  ci.yml  ci_readme.yml  deploy.yml  publish.yml  wheel.yml
doc/: Makefile  api.rst  api_class.rst  api_class_var.rst  api_error.rst  api_format_functions.rst  api_hr_align_constants.rst  autodoc_ref.txt  conf.py  configuring.rst  contributing.rst  convenience.rst  features.rst  hints.rst  index.rst  make.bat  more_examples.rst  quicklinks.rst  requirements.txt
monotable/: __init__.py  alignment.py  cellerror.py  datacls.py  mono.py  monoblock.py  plugin.py  scanner.py  table.py
test/: requirements.txt  requirements_inspect.txt  test_datacls.py  test_examples.py  test_format_scanner.py  test_monoblock.py  test_monotable.py
