[metadata]
# This includes the license file(s) in the wheel.

# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license = MIT
license_files = LICENSE

# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
name = monotable
version = 3.1.0
author = Mark Taylor
author_email = mark66547ta2@gmail.com
description = ASCII table with per column format specs and more.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://monotable.readthedocs.io/en/latest/
project_urls =
    Bug Reports = https://github.com/tmarktaylor/monotable/issues
    Source = https://github.com/tmarktaylor/monotable/
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    ascii
    table
    pretty

[options]
python_requires = >=3.7

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal = 0

# Configurations for external tools.

[flake8]
exclude = doc, test, .mine
max-line-length = 88
extend-ignore = E203

[coverage:run]
branch = True
source = monotable
